--- a/Assigment1/Assignment_1.ipynb
+++ b/Assigment1/Assignment_1.ipynb
@@ -84,6 +84,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Comment 1B\n",
+    "\n",
+    "__Numerical Variables__ -Variables also known as quantitative variables, represent measurable quantities and can be expressed in numerical terms.\n",
+    "\n",
+    "__Categorical Variables__ - Categorical variables, also known as qualitative variables, represent categories or labels and can take on a limited, fixed number of values. These values can be either nominal or ordinal.\n",
+    "\n",
+    "Some variables are difficult to unambiguously assign whether they are numeric or categorical. In our dataset, such non-identifiable variables are bedrooms, bathrooms, floors, grade, yr_built ,yr_renovated. For this variables we can categorize the data but also count basic statistics."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
@@ -106,6 +121,17 @@
     "data[house_numerical_df].describe()\n",
     "#Hint: Function describe()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Comment 1C\n",
+    "\n",
+    "We can see that __count__ isn't meaningful information. The most useful turns out to be __mean__. We can see that avarege house cost 540 thousand and have from 1 to 2 floors. The meaningful statistic is also __max__ and __min__ values which for example showing the expensive and the cheapest House"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -150,6 +176,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Comment 2A\n",
+    "\n",
+    "In the chart, we can read that there are more houses that are small and at the same time cheap, than houses that are expensive and with a large living area."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -181,6 +218,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Comment 2B\n",
+    "\n",
+    "It is most evident in the chart that as the home's rating rises, its price goes up. Which is logical, if the house s in better condition it's more expensive."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "outputs": [
@@ -205,6 +253,17 @@
     "plt.xlabel(\"condition\")\n",
     "plt.ylabel(\"price\")\n",
     "plt.scatter(data.condition, data.price)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Comment 2B\n",
+    "\n",
+    "The price to condition ratio shows that the most expensive houses do not have the best condition, but the condition rated at 3 and 4 points."
    ],
    "metadata": {
     "collapsed": false
@@ -241,6 +300,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Comment 2C\n",
+    "\n",
+    "From the chart, we can read that prices are different between areas of the zipcode. Houses in some neighborhoods are more expensive than houses in others."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -262,6 +332,15 @@
     "plt.colorbar()\n",
     "plt.grid()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The brighter the point the better the house rating. Best houses are around 47.6/-122.0"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -300,6 +379,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Comment 3A\n",
+    "\n",
+    "Comparing this chart to chart from 2B we can see the shape is pretty similar. Boxes inform us that in those spaces the most data is. Other than that we can see median increases with increase of grade."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -332,6 +422,17 @@
     "figure.get_axes()[0].set_ylabel('floors')\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Comment 3B\n",
+    "\n",
+    "Mosaic plots help show relationships and give a visual way to compare groups. We see that houses with one floor and 3 bedrooms are the most popular."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -370,6 +471,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Comment 4A\n",
+    "\n",
+    "The average price of houses that meet this condition is about 514.5 thausond. We can see also 154 records is satisfying for above conditions."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -403,6 +515,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Comment 4B\n",
+    "\n",
+    "We can observe that homes that meet the above specifications are low-price homes with an average grade."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -429,10 +552,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "## Comment 4C\n",
+    "\n",
+    "From the results, we can see that the best house has a price of 260,000 and a living area of 2,710 square meters."
+   ],
    "metadata": {
     "collapsed": false
    }
